Move update versions from being top level containers to being folders in a container, so that they can be eumerated anonymously.